--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -9357,8 +9357,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "df = pd.DataFrame(sorted_categories, columns=[\"Category\", \"Count\"])\n",
     "df[\"Percentage\"] = df[\"Count\"] / total_reviews * 100\n",
     "\n",
@@ -9410,26 +9408,6 @@
     "plt.tight_layout()\n",
     "\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Insight:**\n",
-    "\n",
-    "- Recency:\n",
-    "    - 5 pelanggan teratas memiliki rentang recency antara 699-728 hari sejak pembelian terakhir.\n",
-    "    - Perbedaan recency antar pelanggan top 5 relatif kecil, hanya berkisar 29 hari.\n",
-    "    - **Menunjukkan bahwa pelanggan-pelanggan ini belum melakukan pembelian dalam waktu yang cukup lama (sekitar 2 tahun).**\n",
-    "- Frequency:\n",
-    "    - **Pelanggan teratas melakukan 22 kali pembelian.**\n",
-    "    - Frekuensi pembelian menurun secara bertahap dari 22 ke 15 untuk 5 pelanggan teratas.\n",
-    "    - Perbedaan frekuensi pembelian cukup signifikan antara pelanggan teratas (22) dan kelima (15).\n",
-    "- Monetary:\n",
-    "    - **Pelanggan teratas memiliki total belanja sebesar 13,440** (dalam satuan mata uang).\n",
-    "    - **Terdapat penurunan yang cukup drastis antara pelanggan teratas (13,440) dengan pelanggan kedua (7,160)**.\n",
-    "    - Nilai belanja menurun secara bertahap dari pelanggan kedua hingga kelima."
    ]
   },
   {
@@ -10825,8 +10803,20 @@
     "id": "ZTcyR48Y8DC2"
    },
    "source": [
-    "- Conclution pertanyaan 1\n",
-    "- Conclution pertanyaan 2\n"
+    "1. Apa faktor utama yang menyebabkan pembatalan pesanan?\\\n",
+    "Faktor utama yang menyebabkan pembatalan pesanan adalah masalah pengiriman, yang mencakup 72.17% dari total alasan pembatalan. Keterlambatan pengiriman merupakan penyebab terbesar, dengan kata \"delay\" muncul paling sering dalam ulasan pelanggan. Selain itu, produk dengan spesifikasi teknis yang kompleks dan harga tinggi seperti \"PC Gamer\" juga lebih rentan dibatalkan, serta metode pembayaran dengan kartu kredit lebih sering digunakan dalam pesanan yang dibatalkan (77.7%), yang mungkin terkait dengan kemudahan pembatalan dan perilaku pembelian impulsif.\n",
+    "\n",
+    "2. Bagaimana pengaruh interval pengiriman terhadap tingkat kepuasan pelanggan?\\\n",
+    "Kecepatan pengiriman memiliki dampak yang signifikan terhadap kepuasan pelanggan. Pengiriman cepat (1-2 hari) menghasilkan ulasan dengan skor rata-rata tertinggi 4.50, sementara pengiriman yang memakan waktu lebih lama menyebabkan penurunan skor secara bertahap. Pengiriman 30-60 hari hanya mendapat skor rata-rata 2.26, sedangkan pengiriman lebih dari 60 hari memperoleh skor lebih rendah lagi, yaitu 2.14. Ini menunjukkan bahwa pengiriman lambat memiliki korelasi kuat dengan ulasan negatif.\n",
+    "\n",
+    "3. Kategori produk apa yang paling populer berdasarkan jumlah ulasan?\\\n",
+    "Kategori bed_bath_table adalah yang paling populer, mencakup 9.91% dari total ulasan. Secara keseluruhan, lima kategori teratas (termasuk health_beauty dan sports_leisure) menyumbang hampir 40% dari total ulasan, menunjukkan bahwa konsumen sangat fokus pada produk-produk terkait kenyamanan dan kesehatan.\n",
+    "\n",
+    "4. Bagaimana performa berbagai kategori produk dalam hal kepuasan pelanggan?\\\n",
+    "Kategori health_beauty mencatat performa terbaik dalam hal kepuasan pelanggan dengan Bayesian Average Rating 4.12, diikuti oleh sports_leisure dengan 4.10. Perbedaan antar kategori teratas cukup kecil, mencerminkan konsistensi kualitas di berbagai kategori produk populer.\n",
+    "\n",
+    "5. Bagaimana tren penjualan bulanan?\\\n",
+    "Terdapat lonjakan signifikan dalam penjualan pada November 2017, baik dari sisi pendapatan (1,008,127.73 dalam mata uang Brazil) maupun jumlah pesanan (8,647), yang kemungkinan besar dipicu oleh event Black Friday. Setelah itu, level penjualan cenderung stabil dan lebih tinggi dibandingkan periode sebelum November 2017, menunjukkan dampak positif dari momentum Black Friday terhadap tren penjualan bisnis."
    ]
   }
  ],
