--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/fxrdhan/Data-Analytics-Project/blob/main/notebook.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>"
+   ]
   },
   {
    "cell_type": "markdown",
