--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -22990,27 +22990,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 131,
+      "execution_count": 145,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 694
+          "height": 607
         },
         "id": "PLko-2oWatkW",
-        "outputId": "c4d48f5b-1f63-4618-9a22-2b9e29d0c5ee"
+        "outputId": "09622d81-17b4-4778-bb56-916b5b4591e8"
       },
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-131-7cdb3f43182c>:12: FutureWarning: \n",
-            "\n",
-            "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
-            "\n",
-            "  sns.barplot(\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -23039,6 +23028,7 @@
         "    y=\"product_category_name\",\n",
         "    data=bayesian_ratings,\n",
         "    palette=colors,\n",
+        "    hue=\"product_category_name\",\n",
         ")\n",
         "\n",
         "plt.title(\n",
